feat: update course retrieval documentation to use course code instead of ID
